--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
   rev: 22.6.0
   hooks:
   -   id: black
-      args: [--config=pyproject.toml]
+      args: [--line-length=88]
 - repo: https://github.com/charliermarsh/ruff-pre-commit
   rev: 'v0.0.252'
   hooks:
