--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -1,14 +1,12 @@
 coverage:
   status:
-    # measures overall project coverage
     project:
       default:
-        threshold: 100% # how much decrease in coverage is needed to not consider success
+        threshold: 100% 
 
-    # measures PR or single commit coverage
     patch:
       default:
-        threshold: 100% # how much decrease in coverage is needed to not consider success
+        threshold: 100% 
 
 
     # project: off
