--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r ./backend/requirements.txt
           pip install pytest
           pip install sh
 
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run pytest
         run: |
-          pytest -v
+          pytest -v ./backend
 
   run_tests_macos:
     runs-on: ${{ matrix.os }}
