--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ dynamic = ["version", "readme", "dependencies"]
 requires-python = ">=3.10"
 
 [tool.setuptools.packages.find]
-where = ["backend/src"]
+where = ["src"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
